--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -101,14 +101,14 @@
                         </td>
                     </ng-container>
             
-                    <ng-container matColumnDef="taxPercent">
+                    <!-- <ng-container matColumnDef="taxPercent">
                         <th mat-header-cell *matHeaderCellDef>Tax</th>
                         <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
                             <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
                                 <input matInput formControlName="taxPercent" type="text">
                             </mat-form-field>
                         </td>
-                    </ng-container>
+                    </ng-container> -->
             
                     <ng-container matColumnDef="packagingCharges">
                         <th mat-header-cell *matHeaderCellDef>Packaging Charges</th>
