--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -25,24 +25,52 @@
                 <mat-icon>pie_chart</mat-icon> <span class="d-inline-block ml-3"> Reports</span>
             </a>
         </li>
-        <li>
-            <a href="javascript:;" matRipple [matRippleUnbounded]="false">
+        <li routerLinkActive="active">
+            <a href="javascript:;" routerLink="/admin/user" matRipple [matRippleUnbounded]="false">
                 <mat-icon>person</mat-icon> <span class="d-inline-block ml-3">Users</span>
             </a>
         </li>
+        <li  routerLinkActive="subOpen" class="have_submenu" [class.subOpen]="accoutnOpen">
+            <a href="javascript:;" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
+                <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Account </span>
+                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon></a>
+            <!-- <ul  routerLinkActive="active" class="list-unlisted submenu-Wrapper">
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
+                        Categories
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
+                        Branches
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
+                        Order Types
+                    </a>
+                </li>
+            </ul> -->
+        </li>
         <li  routerLinkActive="subOpen" class="have_submenu" [class.subOpen]="settingOpen">
-            <a href="javascript:;" (click)="settingOpen = !settingOpen" matRipple [matRippleUnbounded]="false">
+            <a href="javascript:;" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
-                <mat-icon class="ml-auto">keyboard_arrow_down</mat-icon></a>
+                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon></a>
             <ul  routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>Categories</a>
+                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
+                        Categories
+                    </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>Branches</a>
+                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
+                        Branches
+                    </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>Order Types</a>
+                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
+                        Order Types
+                    </a>
                 </li>
             </ul>
         </li>
