--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -32,31 +32,31 @@
         </li>
         <li  routerLinkActive="subOpen" class="have_submenu" [class.subOpen]="accoutnOpen">
             <a href="javascript:;" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
-                <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Account </span>
+                <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon></a>
             <ul  routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/dashbord" matRipple>
                         Dashbord
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/transitionlist" matRipple>
                         Transition List
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/make-transaction" matRipple>
                         Make Transition
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/account" matRipple>
                         Account
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/report" matRipple>
                         Reports
                     </a>
                 </li>
