--- a/src/app/admin/account/dashbord/dashbord.component.html
+++ b/src/app/admin/account/dashbord/dashbord.component.html
@@ -1,1 +1,29 @@
-<p>dashbord works!</p>
+
+<div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-6">
+        <div class="dashbordBox d-flex align-items-center text-center">
+            <h3>Make Account</h3>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6">
+        <div class="dashbordBox d-flex align-items-center text-center">
+            <h3>Make Transition</h3>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6">
+        <div class="dashbordBox d-flex align-items-center text-center">
+            <div>
+                <h2>50</h2>
+                <h3>Total Expense</h3>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6">
+        <div class="dashbordBox d-flex align-items-center text-center">
+            <div>
+                <h2>60</h2>
+                <h3>Total Income</h3>
+            </div>
+        </div>
+    </div>
+</div>
