--- a/src/app/admin/account/dashbord/dashbord.component.html
+++ b/src/app/admin/account/dashbord/dashbord.component.html
@@ -1,26 +1,25 @@
-
 <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-6">
-        <div class="dashbordBox d-flex align-items-center text-center">
+        <div class="dashbordBox one d-flex align-items-center justify-content-center">
             <h3>Make Account</h3>
         </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6">
-        <div class="dashbordBox d-flex align-items-center text-center">
+        <div class="dashbordBox two d-flex align-items-center justify-content-center">
             <h3>Make Transition</h3>
         </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6">
-        <div class="dashbordBox d-flex align-items-center text-center">
-            <div>
+        <div class="dashbordBox three d-flex align-items-center justify-content-center">
+            <div class="text-center">
                 <h2>50</h2>
                 <h3>Total Expense</h3>
             </div>
         </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6">
-        <div class="dashbordBox d-flex align-items-center text-center">
-            <div>
+        <div class="dashbordBox four d-flex align-items-center justify-content-center">
+            <div class="text-center">
                 <h2>60</h2>
                 <h3>Total Income</h3>
             </div>
