--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -73,8 +73,8 @@
             </div>
             <div class="col-12 col-md-3">
                 <mat-form-field appearance="outline" class="w-100">
-                    <mat-label>Tax Percent</mat-label>
-                    <input matInput formControlName="taxPercent" type="text">
+                    <mat-label>Packaging Charges</mat-label>
+                    <input matInput formControlName="packagingCharges" type="text">
                 </mat-form-field>
             </div>
         </div>
