--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -55,7 +55,7 @@
 </mat-card>
 
 <div class="table_outerWrapper mat-elevation-z2 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="w-100">
+    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
@@ -63,43 +63,40 @@
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
+                <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" [routerLink]="['/admin/order/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
+                    <button mat-menu-item type="button"><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="orderNo">
+        <ng-container matColumnDef="orderId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-130"> Order No </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderNo}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="type">
+        <ng-container matColumnDef="orderType">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Order Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.order_type.typeName}} </td>
         </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <ng-container matColumnDef="orderAmount">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Order Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.orderAmount}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="orderDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Order Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderDate}} </td>
+        <ng-container matColumnDef="orderStatus">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Order Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.orderStatus}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="amount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+        <ng-container matColumnDef="created_at">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Ordered At </th>
+            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY'}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
 </div>
