--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -91,25 +91,25 @@
             <div class="col-12">
                 <div class="d-flex align-items-center mb-20">
                     <p class="my-0 mr-20">Extra Info Required</p>
-                    <mat-slide-toggle></mat-slide-toggle>
+                    <mat-slide-toggle formControlName="enableExtraInfo"></mat-slide-toggle>
                 </div>
             </div>
             <div class="col-12">
                 <div class="d-flex align-items-center mb-20">
                     <p class="my-0 mr-20">Delivery Charge Enable</p>
-                    <mat-slide-toggle></mat-slide-toggle>
+                    <mat-slide-toggle formControlName="enableDeliverCharge"></mat-slide-toggle>
                 </div>
             </div>
             <div class="col-12">
                 <div class="d-flex align-items-center mb-20">
                     <p class="my-0 mr-20">Extra Charge Enable</p>
-                    <mat-slide-toggle></mat-slide-toggle>
+                    <mat-slide-toggle formControlName="enableExtraCharge"></mat-slide-toggle>
                 </div>
             </div>
             <div class="col-12">
                 <div class="d-flex align-items-center mb-20">
                     <p class="my-0 mr-20">Is Active?</p>
-                    <mat-slide-toggle></mat-slide-toggle>
+                    <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
                 </div>
             </div>
         </div>
