--- a/src/app/guest/signin/signin.component.scss
+++ b/src/app/guest/signin/signin.component.scss
@@ -8,18 +8,16 @@
     width: 100%;
     min-height: 100vh;
     background-color: #f8f8f8;
-
     & .center_box {
         display: block;
         width: 400px;
+        max-width: 100%;
         border-radius: 5px;
         overflow: hidden;
-
         @media (max-width: 768px) {
             position: absolute;
             width: 100%;
         }
-
         & .center_box_title {
             font-size: 2rem;
             font-weight: 600;
